# crisis-guide-speech-agent

./: .gitignore  EMERGENCY_CALL_SETUP.md  README.md  app.py  config.py  demo_escalation_test.py  env.example  pyproject.toml  requirements.txt  start_agentic_voice.sh  test_agentic_voice_agent.py  test_audio_components.py  test_audio_transport.py  test_crisis_agent.py  test_dynamic_responses.py  test_elevenlabs.py  test_elevenlabs_simple.py  test_emergency_call.py  test_emergency_call_fix.py  test_escalation.py  test_escalation_levels.py  test_llm_emergency.py  test_llm_emergency_scenario.py  test_markdown_cleaning.py  test_pipecat_integration.py  test_pipecat_simple.py  test_pipeline_simple.py  test_response_detection.py  test_setup.py  test_simple_call.py  test_smart_context.py  test_whisper_debug.py
src/agents/: agentic_chat_agent.py  agentic_voice_agent.py
src/audio/: preprocessor.py  recorder.py
src/config/: config_validator.py  constants.py  env_config.py  openai_config.py
src/pipecat/: __init__.py  conversation_state.py  elevenlabs_adapter.py  pipeline_manager.py  response_detector.py  whisper_adapter.py
src/services/: elevenlabs_service.py  emergency_call_service.py  openai_service.py  whisper_service.py
src/transcription/: whisper_client.py
src/ui/: components.py  crisis_components.py
src/utils/: error_handler.py  file_utils.py
src/web/: agentic_voice_web_ui.py
tests/: README.md  __init__.py  conftest.py  test_audio.py  test_config.py  test_env_config.py  test_runner.py  test_transcription.py  test_utils.py
